v2 Changed to OOP structure. Added plot style module.